Fix "SF" font on Firefox/Safari

--- a/packages/react-cosmos-playground/src/utils/common.less
+++ b/packages/react-cosmos-playground/src/utils/common.less
@@ -1,6 +1,6 @@
 @default-spacing: 10px;
-@default-font-family: 'BlinkMacSystemFont', 'Lucida Grande', 'Segoe UI', Ubuntu,
-  Cantarell, sans-serif;
+@default-font-family: -apple-system, 'BlinkMacSystemFont', 'Lucida Grande',
+  'Segoe UI', Ubuntu, Cantarell, sans-serif;
 @default-font-size: 14px;
 
 @left-nav-bgcolor: #0c293e;
